--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -95,9 +95,23 @@
             <div class="card-body">
                 <!-- For later -->
                 {% if commented %}
-                <div class="alert alert-success" role="alert">
-                    Your comment is awaiting approval
+
+                <div class="alert alert-success alert-dismissible fade show" id="msg" role="alert">
+                    <p>You've successfully left your comment!</p>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
+                <div class="alert alert-success alert-dismissible fade show" id="msg" role="alert">
+                    <p>Your comment is awaiting approval</p>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% for message in messages %}
+                <script>
+                    setTimeout(function () {
+                        let messages = document.getElementById('msg');
+                        messages.close();
+                    }, 2500);
+                </script>
+                {%endfor%}
                 {% else %}
                 {% if user.is_authenticated %}
 
