--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -97,21 +97,17 @@
                 {% if commented %}
 
                 <div class="alert alert-success alert-dismissible fade show" id="msg" role="alert">
-                    <p>You've successfully left your comment!</p>
+                    <p>You've successfully left your comment and it is awaiting approval!</p>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
-                <div class="alert alert-success alert-dismissible fade show" id="msg" role="alert">
-                    <p>Your comment is awaiting approval</p>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-                {% for message in messages %}
+
                 <script>
                     setTimeout(function () {
                         let messages = document.getElementById('msg');
                         messages.close();
-                    }, 2500);
+                    }, 3000);
                 </script>
-                {%endfor%}
+
                 {% else %}
                 {% if user.is_authenticated %}
 
